1998-08-05  Andrew Veliath  <andrewtv@usa.net>

	* IDL.h: Generate a CPP error if glib.h isn't included beforehand.
	
	* IDL.h, parser.y: Integrate Sebastian Wilhelm's patch to add type
	  cast checking, with a number of style modifications of my own
	  (anything I broke is my fault ;-) for libIDL and add a warning
	  on casting a NULL pointer.

	* lexer.l: Implement Dick's suggestion to warn or error on
	  underscores in identifiers with underscores or ones which begin
	  with an underscore.
	
1998-08-04  Andrew Veliath  <andrewtv@usa.net>

	* Preliminary inheritance checks

	* Implement pragmas for prefix, ID and version
	
	* First cut at Repository ID generation

1998-08-03  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: Add many new error messages.

1998-07-28  Andrew Veliath  <andrewtv@usa.net>

	* acinclude.m4 (revive): Create AC_CPP_ACCEPT_IDL and
	AC_CPP_PIPE_STDIN tests

	* configure.in: Add AC_CPP_ACCEPT_IDL and AC_CPP_PIPE_STDIN in
	configuration

	* util.h, parser.y, lexer.l: If HAVE_CPP_PIPE_STDIN is defined,
	then compile for piped CPP input, else use the more portable
	symlink method.  Also use getcwd instead of g_getcwd, since it has
	been commented out in glib.

1998-07-27  Andrew Veliath  <andrewtv@usa.net>

	* parser.y (IDL_parse_filename): g_getcwd returns a static buffer

1998-07-25  Neil Vachharajani  <nvachhar@pluto.njcc.com>

	* parser.y: Add one more byte for / in the allocation of linkto in 
	IDL_parse_filename
	
1998-07-20  Andrew Veliath  <andrewtv@usa.net>

	* Most of inhertance is done.  ChangeLog won't be updated much now
	  in preference to CVS logs.

1998-07-01  Andrew Veliath  <andrewtv@usa.net>

	* Fix spelling of "inheritance" :)
	
	* Add use long long type if __GNUC__ defined

	* Fix scoping rules (scope idents weren't being referenced
	  properly)

1998-06-29  Andrew Veliath  <andrewtv@usa.net>

	* Create skeleton texinfo file

	* configure.in improved
	
	* Wee, should now also work with standard lex with new renaming
	  rule